--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-datetime": "^1.5.0",
     "chai-http": "^4.0.0",
     "faker": "^4.1.0",
     "mocha": "^5.2.0"
