--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DreamCatcher app",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --exit"
+    "test": "mocha --timeout 15000 --exit"
   },
   "author": "Josh Painter",
   "license": "ISC",
