--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.2.2",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
+    "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
