fixed insecure nicedit script and DeprecationWarning: current URL string parser is deprecated warning for mongodb

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "DreamCatcher app",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "mocha --timeout 15000 --exit"
   },
   "author": "Josh Painter",
